# ts-files

./: .gitignore  Gemfile  auth.js  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
.github/workflows/: ci.yml
config/: application.rb  cable.yml  credentials.yml.enc  mongoid.yml
config/environments/: production.rb
deploy/: sync.sh
routes/: audio.js
tsAdmin/: settings.py  urls.py  wsgi.py
tssite/: __init__.py  admin.py  apps.py  models.py  urls.py  validators.py  views.py
tssite/feeds/: all.py  itunes.py  nach.py  schedule.py  talmud.py
tssite/migrations/: 0001_initial.py  0002_auto_20191114_0324.py  0003_auto_20191117_1712.py  0004_auto_20191117_1714.py  0005_auto_20191117_1715.py  0006_auto_20191117_1716.py  0007_auto_20191117_1718.py  0008_auto_20191117_1719.py  0009_auto_20191117_1726.py  0010_auto_20191117_1735.py  0011_auto_20191117_1746.py  0012_auto_20191117_1804.py  0013_auto_20191117_1805.py  0014_auto_20191117_1832.py  0015_auto_20191117_1833.py  0016_auto_20191117_1838.py  0017_auto_20191206_0436.py  0018_auto_20191208_2346.py  0019_auto_20191209_0636.py  0020_auto_20200216_1815.py  0021_auto_20200216_2312.py  0022_auto_20200216_2315.py  0023_talmudsponsor_talmudstudy.py  0024_auto_20200319_0413.py  0025_auto_20200320_0334.py  0026_auto_20200320_0358.py  0027_auto_20200322_1821.py  0028_auto_20200510_1553.py  0028_auto_20200511_0348.py  0029_auto_20200525_0048.py  0030_schedule_alter_class_options_alter_teamim_audio_and_more.py  0031_alter_schedulepause_schedule.py  (+2 more)
views/: index.ejs
(+3 files in other folders)
